[project]
name = "ComfyUI-geltz"
description = "Nodes for dynamic CFG scaling, latents, image manipulation, custom samplers, and CLIP token utilities"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/geltz/ComfyUI-geltz"

[tool.comfy]
PublisherId = "geltz"
DisplayName = "ComfyUI-geltz"
Icon = ""
