[project]
name = "ComfyUI-geltz"
description = "Nodes for guidance, latents, image manipulation, custom samplers, and token utilities"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/geltz/ComfyUI-geltz"

[tool.comfy]
PublisherId = "geltz"
DisplayName = "ComfyUI-geltz"
Icon = ""
